--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ html, body {
   position: relative;
   max-width: 1200px;
   margin: 0 auto;
+  margin-left: -20px;
 }
 
 /* The actual timeline (the vertical ruler) */
